--- a/src/Tempus/Tempus.csproj
+++ b/src/Tempus/Tempus.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard1.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PackageId>Tempus</PackageId>
     <Authors>Maxim Cherednik</Authors>
     <Description>A simple async/await, unit-test friendly timer implementation</Description>
